[tool.poetry]
name = "pc2mqtt"
version = "0.1.1"
description = ""
authors = ["Maxim Mityutko"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
paho-mqtt = "1.6.1"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
